<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/textViewTituloRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_registro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/editTextNuevoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nuevo_usuario"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextNuevaContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nueva_contrasena"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextNuevoUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonConfirmarRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_confirmar_registro"
        app:layout_constraintTop_toBottomOf="@+id/editTextNuevaContrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>