<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp" 
    android:paddingEnd="16dp" 
    tools:context=".CajonActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_buttons_top_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <!-- Primera Fila -->

    <ImageButton
        android:id="@+id/button_abrir_agenda"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="Abrir Agenda"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_agenda_app"
        app:layout_constraintEnd_toStartOf="@+id/button_abrir_calculadora"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_buttons_top_row" />

    <TextView
        android:id="@+id/textview_agenda_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_agenda"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/button_abrir_agenda"
        app:layout_constraintStart_toStartOf="@+id/button_abrir_agenda"
        app:layout_constraintEnd_toEndOf="@+id/button_abrir_agenda"/>

    <ImageButton
        android:id="@+id/button_abrir_calculadora"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_calculadora"
        android:background="@android:color/transparent"
        android:contentDescription="Abrir Calculadora"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="@+id/button_abrir_agenda"
        app:layout_constraintBottom_toBottomOf="@+id/button_abrir_agenda"
        app:layout_constraintStart_toEndOf="@+id/button_abrir_agenda"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textview_calculadora_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_calculadora"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/button_abrir_calculadora"
        app:layout_constraintStart_toStartOf="@+id/button_abrir_calculadora"
        app:layout_constraintEnd_toEndOf="@+id/button_abrir_calculadora"/>

    <!-- Segunda Fila -->
    <ImageButton
        android:id="@+id/button_abrir_especialidades"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_especialidades"
        android:background="@android:color/transparent"
        android:contentDescription="Abrir Especialidades"
        android:padding="12dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/textview_agenda_label" 
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/button_abrir_agenda" />

    <TextView
        android:id="@+id/textview_especialidades_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_especialidades"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/button_abrir_especialidades"
        app:layout_constraintStart_toStartOf="@+id/button_abrir_especialidades"
        app:layout_constraintEnd_toEndOf="@+id/button_abrir_especialidades"/>

</androidx.constraintlayout.widget.ConstraintLayout>